# test-and-diagnostic

./: CONTRIBUTING.md  Makefile.am  Makefile.orig  NOTICE  configure.ac  genautotools.ini
config/: TestAndDiagnostic.XML  TestAndDiagnostic_arm.XML  TestAndDiagnostic_pc.XML
lib/: libdiagnostic.so.0.0.0  libdmltad.so.0  libdmltad.so.0.0.0
scripts/: FileHandle_Monitor.sh  arping_peer  check_gw_health.sh  check_memory_health.sh  corrective_action.sh  dhcp_rouge_server_detection.sh  getHostNumberofentries.sh  getSsidNames.sh  gui_session_expiry.sh  log_hourly.sh  log_mem_cpu_info.sh  log_sixhourly.sh  log_status.sh  log_twice_day.sh  memory_usage.sh  monitor_process_info.sh  monitor_zombies.sh  oemhooks.sh  ping_peer  remove_max_cpu_usage_file.sh  resource_monitor.sh  resource_monitor_recover.sh  rxtx_cur.sh  rxtx_dmp.sh  rxtx_lan.sh  rxtx_res.sh  rxtx_sta.sh  rxtx_sum.sh  schd_dhcp_server_detection_test.sh  self_heal_connectivity_test.sh  selfheal_aggressive.sh  selfheal_bootup.sh  selfheal_cosa_start_rem.sh  selfheal_reset_counts.sh  speedtest.sh  speedtest_version.sh  start_gw_heath.sh  syscfg_cleanup.sh  syscfg_recover.sh  task_health_monitor.sh  (+2 more)
scripts/device/tccbr/: corrective_action.sh  self_heal_connectivity_test.sh  selfheal_bootup.sh  task_health_monitor.sh
scripts/systemd/: sysd_corrective_action.sh  sysd_task_health_monitor.sh
source/: Makefile.am
source-arm/diagnostic/BbhmDiagIpPing/: Makefile.am  bbhm_diagip_operation_priv.c
source-arm/dmltad/: Makefile.am  cosa_diagnostic_apis_priv.c  plugin_main_priv.c
source-mips/diagnostic/BbhmDiagIpPing/: Makefile.am  bbhm_diagip_operation_priv.c
source-mips/dmltad/: Makefile.am  cosa_diagnostic_apis_priv.c  plugin_main_priv.c
source-pc/: Makefile.am
source-pc/TandDSsp/: Makefile.am  ssp_action.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source-pc/diagnostic/: bbhm_diag_lib.c
source-pc/diagnostic/BbhmDiagDownload/: bbhm_download_action.c  bbhm_download_base.c  bbhm_download_operation.c
source-pc/diagnostic/BbhmDiagExecutor/: BbhmDiagExecutor.dsp  bbhm_diageo_interface.c  bbhm_diageo_operation.c  bbhm_diageo_process.c  bbhm_diageo_states.c
source-pc/diagnostic/BbhmDiagIpPing/: BbhmDiagIpPing.dsp  BbhmDiagIpPing.dsw  bbhm_diagip_base.c  bbhm_diagip_interface.c  bbhm_diagip_internal_api.h  bbhm_diagip_operation.c  bbhm_diagip_sink_operation.c  bbhm_diagip_sink_states.c  bbhm_diagip_tdo_operation.c
source-pc/diagnostic/BbhmDiagIpTraceroute/: BbhmDiagIpTraceroute.dsp  bbhm_diagit_base.c  bbhm_diagit_interface.c  bbhm_diagit_internal_api.h  bbhm_diagit_operation.c  bbhm_diagit_process.c  bbhm_diagit_sink_base.c  bbhm_diagit_sink_operation.c  bbhm_diagit_states.c
source-pc/diagnostic/BbhmDiagNSLookup/: BbhmDiagNSLookup.dsp  bbhm_diagns_base.c  bbhm_diagns_global.h  bbhm_diagns_interface.c  bbhm_diagns_operation.c  bbhm_diagns_process.c  bbhm_diagns_states.c  bbhm_diagns_tdo_operation.c  bbhm_diagns_xsink_operation.c  bbhm_diagns_xsink_states.c
source-pc/diagnostic/BbhmDiagUpload/: BbhmDiagUpload.dsp  BbhmDiagUpload.dsw  bbhm_upload_action.c  bbhm_upload_base.c  bbhm_upload_global.h  bbhm_upload_internal_api.h  bbhm_upload_operation.c
source-pc/diagnostic/BbhmUdpEchoServer/: BbhmUdpEchoServer.dsp  BbhmUdpEchoServer.dsw  bbhm_udpecho_action.c  bbhm_udpecho_base.c  bbhm_udpecho_internal_api.h
source-pc/diagnostic/include/: bbhm_co_name.h  bbhm_diag_lib.h  (+5 more)
source-pc/dmltad/: Makefile.am  cosa_apis.h  cosa_apis_deviceinfo.c  cosa_apis_util.c  cosa_apis_util_priv.c  cosa_apis_vendorlogfile.c  cosa_apis_vendorlogfile.h  cosa_deviceinfo_util_priv.c  cosa_diagnostic_apis.c  cosa_diagnostic_apis.h  cosa_diagnostic_apis_priv.c  cosa_dml_api_common.h  cosa_dns_dml.c  cosa_dns_dml.h  cosa_ip_dml.c  cosa_ip_dml.h  cosa_ip_dml_priv.c  cosa_logbackup_apis.c  cosa_logbackup_dml.c  cosa_logbackup_dml.h  cosa_selfheal_apis.c  cosa_selfheal_apis.h  cosa_selfheal_dml.c  cosa_selfheal_dml.h  diag.c  diag.h  diag_ping.c  diag_traceroute.c  plugin_main.c  plugin_main_apis.c  plugin_main_apis.h  plugin_main_priv.c
source-pc/util/: Makefile.am
source/CpuMemFrag/: cpumemfrag_cron.sh  log_buddyinfo.sh
source/DevicePrioritization/: Makefile.am
source/ImageHealthChecker/: IHC_Client.c  ImagehealthChecker.c  ImagehealthChecker.h  Makefile.am
source/LatencyMeasurement/: Makefile.am
source/LowLatency/: Makefile.am
source/StaticInfo/: log_staticIP_client_info.sh
source/TandDSsp/: CcspTandDSsp  Makefile.am  ssp_action.c  ssp_action_priv.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  ssp_messagebus_interface_priv.c  tad_rbus_apis.c  tad_rbus_apis.h
source/ThermalCtrl/: check_fan.sh
source/cpu_load/: Makefile.am  cpu_load.c
source/diagnostic/: bbhm_diag_lib.c
source/dmltad/: Makefile.am  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_deviceinfo.c  cosa_apis_deviceinfo.h  cosa_apis_util.c  cosa_apis_util.h  cosa_apis_util_priv.c  cosa_apis_vendorlogfile.c  cosa_apis_vendorlogfile.h  cosa_deviceinfo_util.c  cosa_deviceinfo_util.h  cosa_deviceinfo_util_priv.c  cosa_diagnostic_apis.c  cosa_diagnostic_apis.h  cosa_diagnostic_apis_priv.c  cosa_dml_api_common.h  cosa_dns_dml.c  cosa_dns_dml.h  cosa_hwst_dml.c  cosa_ip_dml.c  cosa_ip_dml.h  cosa_ip_dml_priv.c  cosa_logbackup_apis.c  cosa_logbackup_dml.c  cosa_logbackup_dml.h  cosa_powermgt_tcxb6_dml.c  cosa_selfheal_apis.c  cosa_selfheal_apis.h  cosa_selfheal_dml.c  cosa_selfheal_dml.h  cosa_telemetry_dml.c  cosa_telemetry_dml.h  cosa_telemetry_internal.c  cosa_telemetry_internal.h  cosa_thermal_dml.c  cosa_thermal_dml.h  cosa_wanconnectivity_apis.c  cosa_wanconnectivity_apis.h  (+18 more)
source/memory_load/: Makefile.am  memory_load.c
source/test/: Makefile.am  gtest_main.cpp
source/test/WanConnectivityCheck/: Makefile.am  WanConnectivityCheck.cpp  gtest_main.cpp
source/test/dmltad/WanCnctvtyChkMock/: CcspTandDWanCnctvtyChkTest.cpp  Makefile.am  gtest_main.cpp
source/util/: Makefile.am  rxtx_100.c  selfheal_utility.c  sub64.c
source/xle_selfheal/: Makefile.am  xle_selfheal_util.c
(+135 files in other folders)
